<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRegistro"
            android:textColor="#0B2161"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="26sp"/>

        <ImageView
            android:layout_width="280dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cliente"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:padding="10px"/>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:maxLength="40"
                android:hint="@string/lblNombre"
                android:gravity="center"
                android:inputType="text"
                android:background="@drawable/bordes"
                android:textAlignment="center" />

             <EditText
                 android:id="@+id/txtDireccion"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginRight="45dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="45dp"
                 android:maxLength="40"
                 android:hint="@string/lblDireccion"
                 android:gravity="center"
                 android:inputType="text"
                 android:background="@drawable/bordes"
                 android:textAlignment="center" />

             <EditText
                 android:id="@+id/txtDistrito"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginRight="45dp"
                 android:layout_marginLeft="45dp"
                 android:maxLength="30"
                 android:layout_marginTop="20dp"
                 android:hint="@string/lblDistrito"
                 android:inputType="text"
                 android:gravity="center"
                 android:background="@drawable/bordes"
                 android:textAlignment="center" />

         </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:text="@string/btnRegistrar">
            </Button>
            <Button
                android:id="@+id/btnAtras"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:text="@string/btnAtras">
            </Button>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>